--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "description": "Backend for Needha Gold ERP system.",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.21.2",
-      "dotenv": "^16.4.7",
-      "cors": "^2.8.5",
-      "body-parser": "^1.20.3",
-      "jsforce": "^3.6.4",
-      "bcrypt": "^5.1.1",
-      "multer": "^1.4.5-lts.1"
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsforce": "^3.6.4",
+        "multer": "^1.4.5-lts.1",
+        "puppeteer": "^24.1.1"
     }
-  }
-  
+}
