--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@puppeteer/browsers": "^2.7.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
@@ -14,6 +15,7 @@
         "express": "^4.21.2",
         "jsforce": "^3.6.4",
         "multer": "^1.4.5-lts.1",
-        "puppeteer": "^24.1.1"
+        "puppeteer": "^24.1.1",
+        "puppeteer-core": "^24.1.1"
     }
 }
