--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Backend for Needha Gold ERP system.",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "postinstall": "npx puppeteer browsers install chrome"
+            }
     },
     "dependencies": {
         "@puppeteer/browsers": "^2.7.0",
