--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "npm install && apt-get update && apt-get install -y chromium-browser"
     },
     "dependencies": {
-        "@puppeteer/browsers": "^2.7.0",
+        "@sparticuz/chromium": "^132.0.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
@@ -16,7 +16,6 @@
         "express": "^4.21.2",
         "jsforce": "^3.6.4",
         "multer": "^1.4.5-lts.1",
-        "puppeteer": "^24.1.1",
-        "puppeteer-core": "^24.1.1"
+        "puppeteer": "^24.1.1"
     }
 }
