--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.21.2",
         "jsforce": "^3.6.4",
         "multer": "^1.4.5-lts.1",
-        "puppeteer": "^24.1.1"
+        "puppeteer": "^24.1.1",
+        "puppeteer-core": "^24.1.1"
     }
 }
