--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@sparticuz/chromium": "^132.0.0",
+        "@sparticuz/chromium-min": "^132.0.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
