--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "build": "npm install && apt-get update && apt-get install -y chromium-browser"
+        "build": "npm install && apt-get update && apt-get install -y chromium-browser",
+        "postinstall": "npx @sparticuz/chromium-min install"
     },
     "dependencies": {
         "@sparticuz/chromium": "^132.0.0",
