--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "build": "npm install && apt-get update && apt-get install -y chromium-browser",
+        "build": "npm install && apt-get update && apt-get install -y chromium-browser"
         
     },
     "dependencies": {
