--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
     "description": "Backend for Needha Gold ERP system.",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
-        "build": "npm install && apt-get update && apt-get install -y chromium-browser"
-        
+        "start": "node server.js"
     },
     "dependencies": {
-        "@sparticuz/chromium": "^132.0.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "jsforce": "^3.6.4",
-        "multer": "^1.4.5-lts.1",
-        "puppeteer-core": "^24.1.1",
-        "puppeteer": "^21.0.0"
+        "multer": "^1.4.5-lts.1"
     }
 }
