--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@puppeteer/browsers": "^2.7.0",
+        "@sparticuz/chromium": "^132.0.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "jsforce": "^3.6.4",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "puppeteer-core": "^24.1.1"
     }
 }
