--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "build": "./render-build.sh",
+        "build": "./render-build.sh"
     },
     "dependencies": {
         "@puppeteer/browsers": "^2.7.0",
